# clip-embedder-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  general_export_onnx.py  justfile  pull_onnx.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: .gitignore
benches/: model_bench.rs
data/: create_onnx.py
examples/: basic.rs  debug.rs  debug_local.rs  general_debug.rs  general_search.rs  run.rs  search.rs  text_only.rs  vision_only.rs
examples/common/: examples_common.rs
models/clip_openai/: Cargo.toml  export_onnx.py
models/clip_openai/assets/model/: export_onnx_vit.py
models/clip_openai/src/: lib.rs  main.rs
models/clip_openai_old/: Cargo.toml
models/clip_openai_old/assets/: .gitignore
models/clip_openai_old/assets/model/: create_onnx.py
models/clip_openai_old/src/: image_encoder.rs  main.rs  text_encoder.rs  utils.rs
models/clip_sl1/: export_onnx.py
models/clip_sl1/assets/: .gitignore
models/clip_sl1/assets/model/: README.md
models/clip_sl1/examples/: sl1_debug.rs  sl1_search.rs
models/clip_sl1/src/: lib.rs
models/clip_sl2/: Cargo.toml  TODO.md
models/clip_sl2/assets/model/: export_onnx.py
models/clip_sl2/examples/: debug.rs  perf.rs  search.rs
models/clip_sl2/src/: config.rs  error.rs  lib.rs  main.rs  perf.rs  text.rs  utils.rs  vision.rs
models/open_clip/: Cargo.toml  TODO.md  export_onnx.py  general_export_onnx.py
models/open_clip/assets/: .gitignore
models/open_clip/examples/: general_debug.rs  general_search.rs  search.rs
models/open_clip/src/: config.rs  error.rs  lib.rs  onnx.rs  text.rs  vision.rs
scripts/: all.ps1  context.ps1  linux_context.sh  pull_popular_models.ps1  py_checks.ps1
src/: clip.rs  config.rs  download.rs  error.rs  fe_test.rs  image_encoder.rs  lib.rs  main.rs  model_manager.rs  onnx.rs  search_images.rs  text.rs  text_encoder.rs  utils.rs  vision.rs
tests/: integration_test.rs  test_image_encoder.rs  test_image_search.rs  test_text_encoder.rs
