[package]
name = "open_clip_inference"
version = "0.1.4"
edition = "2024"
description = "Run OpenCLIP compatible embedding models via ONNX Runtime"
repository = "https://github.com/RuurdBijlsma/open-clip-rs"
license = "MIT"
keywords = ["clip", "onnx", "embedding", "inference", "computer-vision"]
categories = ["computer-vision"]
exclude = ["assets", "benches", "examples", "scripts", "tests"]

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
image = "0.25.9"
tokenizers = { version = "0.22.2" }
rayon = "1.11.0"
thiserror = "2.0.18"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
load-dynamic = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
nvrtx = ["ort/nvrtx"]
xnnpack = ["ort/xnnpack"]
webgpu = ["ort/webgpu"]
migraphx = ["ort/migraphx"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
cann = ["ort/cann"]
tvm = ["ort/tvm"]
vitis = ["ort/vitis"]
azure = ["ort/azure"]

[dev-dependencies]
color-eyre = "0.6.5"
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "model_bench"
harness = false
