[package]
name = "clip_sl2"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
image = "0.25.9"
tokenizers = { version = "0.22.2" }
rayon = "1.11.0"
thiserror = "2.0.18"
num_cpus = "1.17.0"
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
